# sqlalchemy-project

./: .env-file-example  create_main.py  docker-compose.yml  pyproject.toml
conf/: db_session.py
models/: __all_models.py  aditivio_nutritivo.py  conservante.py  ingrediente.py  lote.py  model_base.py  nota_fiscal.py  picole.py  revendor.py  sabores.py  tipo_embalagem.py  tipo_picole.py
notebooks/: teste-db.ipynb
